tests/auto/quick/pointerhandlers/pointerhandlers.pro
@@ -3,6 +3,7 @@ TEMPLATE = subdirs
 qtConfig(private_tests) {
     SUBDIRS += \
         flickableinterop \
+        mousearea_interop \
         multipointtoucharea_interop \
         qquickdraghandler \
         qquickhoverhandler \
